Fix Swagger request body documentation
